# TvGuide

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel-TvGuide  manifest.json  meta.json  paket.dependencies  paket.tvguide_deps.bzl  paket.tvguide_deps_extension.bzl
.github/workflows/: release.yml
Configuration/: config.html
src/: AssemblyResolver.cs  ChannelManager.cs  HlsManager.cs  Plugin.cs  ScheduleGenerator.cs  ServiceRegistrator.cs  SuggestionController.cs  SuggestionService.cs  TvGuideConfiguration.cs  TvGuideFfmpeg.cs  TvGuideLiveStream.cs  TvGuideService.cs  TvGuideStreamController.cs
static/: .gitattributes
test/: ScheduleGeneratorTest.cs  TvGuideConfigurationTest.cs
